opam-version: "2.0"
version: "v0.16.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/hardcaml_xilinx_components"
bug-reports: "https://github.com/janestreet/hardcaml_xilinx_components/issues"
dev-repo: "git+https://github.com/janestreet/hardcaml_xilinx_components.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml_xilinx_components/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"     {>= "4.14.0"}
  "base"      {>= "v0.16" & < "v0.17"}
  "core"      {>= "v0.16" & < "v0.17"}
  "core_unix" {>= "v0.16" & < "v0.17"}
  "hardcaml"  {>= "v0.16" & < "v0.17"}
  "ppx_jane"  {>= "v0.16" & < "v0.17"}
  "stdio"     {>= "v0.16" & < "v0.17"}
  "dune"      {>= "2.0.0"}
  "re"        {>= "1.8.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Hardcaml Xilinx component definitions"
description: "
A tool for reading Xilinx VHDL Unisim and XPM component definitions from a Vivado
installation and generating Hardcaml interfaces automatically.
"
